[package]
name = "warp-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
mobc-postgres = { version = "0.8.0", features = ["with-chrono-0_4"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_derive = "1.0.189"
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["macros"] }
warp = "0.3.6"
